# python-debian.template

./: README.md  cookiecutter.json
{{cookiecutter.project_slut}}/: pyproject.toml
{{cookiecutter.project_slut}}/.devenv/: Dockerfile
